--- a/ProTwo/templates/ProTwo/index.html
+++ b/ProTwo/templates/ProTwo/index.html
@@ -2,9 +2,15 @@
 <html>
 <head>
 	<title>Help</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-	<h1>Welcome to help Sextion</h1>
+	<div class="container">
+		<div class="jumbotron">
+			<h1>Welcome to help Sextion</h1>
+			<h2>Go to /signup to Signup</h2>
+		</div>
+	</div>
 	{{ inserted_by_django }}
 </body>
 </html>
